rework the toolboxes so that they actually mesh with the API of AbstractToolBox:

* have setShowing call the show/hide feature, not the other way around (fixes bug 202549)
* put the actions in order by the tags applied so that things appear ordered
* allow the toolbox to define what the parent of the tools should be (so the desktop toolbox can use the backing as the parent)
* use a layout in the desktop toolbox background that the tools are in; waaaaaay simpler code as a result
* keep only one svg object around for the desktop toolbox background, not two
* use a QtKinetic animation for the show/hide

i'm not happy with the precise positioning of the desktop toolbox nor with the animation (just a fade in/out right now.. meh) but the hard work is done with this commit and the rest is twiddling (which i'll do in the coming days)
BUG:202549

svn path=/trunk/KDE/kdelibs/; revision=1069706